## Version 1.1.2

Minor documentation improvements.

Internal code cleaning.

## Version 1.1.1

`coxsimPoly` is able to simulate quantities of interest for only the polynomial terms without the linear component. Feature request from Mattia Valente.

Minor error message improvements.

## Version 1.1

Added `SurvExpand` for converting a data frame of non-equal interval continuous observations into equal interval continuous observations. This is very useful if you intend to create time interactions. Thanks to Mintao Nie and an anonymous reviewer for the suggestion.

Roxyegen documentation improvements.

## Version 1.0

Added `type` argument to `simGG.spline`. Allows the user to plot using `points`, `ribbons`, or `lines`. NOTE: the `ribbons` standalone argument is depricated.

Added `SmoothSpline` argument to `simGG.simspline` to use smoothing splines on the simulations. Creates a smoother graph.

Uses `mvrnorm` from the `MASS` package instead of `rmultnorm` to draw the simulations.

Documentation and other internal improvements.

## Version 0.8.6

Documentation improvements.

## Version 0.8.5

Added the ability to choose whether or not to exponentiate marginal effects for `coxsimInteract` with the `expMarg` argument. 

## Version 0.8.4

Minor bug fix for `simGG.siminteract`.

## Version 0.8.3

License change and minor message changes.

## Version 0.8.2

Added `legend` argument to allow the user to hide plot legends, when applicable.

Minor aesthetic updates and documentation clarifications.

## Version 0.8.1

Minor changes for CRAN check.

## Version 0.8

Added the argument `ribbons` to the simGG method. This produces a plot with shaded areas ('ribbons') for the minimum and maximum simulation values as well as the central 50% of this area. It also plots a line for the median value of this area. (Thanks to Jeff Chwieroth for the suggestion.)

Internal improvements to minimise the size of simulation output objects and improve performance if qi = "Hazard Rate".
